# ridgeline

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml  homebrew.yml  release.yml  winget.yml
flatpak/: io.github.saturate.Ridgeline.desktop  io.github.saturate.Ridgeline.metainfo.xml  io.github.saturate.Ridgeline.yml
src/: App.tsx  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/config/: credentials.rs  loader.rs  model.rs
src-tauri/src/mcp/: mod.rs  server.rs  tests.rs
src-tauri/src/notifications/: mod.rs  sender.rs  tracker.rs
src-tauri/src/polling/: error.rs  mod.rs  poller.rs
src-tauri/src/providers/: traits.rs  types.rs
src-tauri/src/providers/azure_devops/: client.rs  endpoints.rs  mapper.rs  mod.rs  provider.rs  types.rs
src-tauri/src/util/: time.rs
src/components/layout/: app-layout.tsx  dashboard.tsx
src/components/pr/: age-indicator.tsx  merge-status-badge.tsx  pr-detail-panel.tsx  pr-list.tsx  pr-row.tsx  pr-status-summary.tsx  vote-badge.tsx
src/config/: loader.rs  mod.rs  model.rs
src/lib/: api.ts  conventional-commit.ts  events.ts  mock-data.ts  provider-colors.ts  time.ts  types.ts
src/notifications/: desktop.rs  mod.rs  tracker.rs
src/polling/: error.rs  poller.rs
src/providers/: mod.rs  types.rs
src/state/: app_state.rs  filters.rs
src/ui/: app.rs  keybindings.rs  mod.rs  theme.rs
src/util/: browser.rs  mod.rs
(+26 files in other folders)
