[package]
name = "ridgeline"
version = "0.1.0"
edition = "2021"

[dependencies]
iocraft = "0.7"
smol = "2"
futures = "0.3"
async-compat = "0.2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
base64 = "0.22"
open = "5"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5"
