[package]
name = "ridgeline"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "ridgeline_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ridgeline"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "6"
thiserror = "2"
anyhow = "1"
urlencoding = "2"
base64 = "0.22"
futures = "0.3"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
